--- a/css/style.scss
+++ b/css/style.scss
@@ -14,6 +14,7 @@ body {
 .calculator {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   border-radius: 20px;
   overflow: hidden;
   max-width: 500px;
